--- a/src/components/Home/Orders/Orders.module.css
+++ b/src/components/Home/Orders/Orders.module.css
@@ -2,6 +2,7 @@
   border: 2px dotted #49d893;
   border-radius: 10px;
   margin-bottom: 40px;
+  width: 100%;
 }
 .dragdrop h4 {
   margin: 0;
@@ -46,5 +47,37 @@
   }
   .orders {
     height: 658px;
+  }
+}
+@media screen and (max-width: 1200px) {
+  .orderList {
+    margin: 0 60px;
+  }
+  .orders {
+    padding: 0 40px;
+  }
+}
+
+@media screen and (max-width: 700px) {
+  .orderList {
+    margin: 0px;
+  }
+  .orders {
+    padding: 0 40px;
+  }
+}
+
+@media screen and (max-width: 500px) {
+  .dragdrop {
+    border: 2px dotted #49d893;
+    border-radius: 10px;
+    margin-bottom: 30px;
+  }
+  .dragdrop h4 {
+    padding: 4px 0;
+    font-size: 16px;
+  }
+  .orders {
+    padding: 0px;
   }
 }
