--- a/src/components/Home/Sidenav/Sidenav.module.css
+++ b/src/components/Home/Sidenav/Sidenav.module.css
@@ -36,6 +36,73 @@
 }
 @media screen and (max-width: 1600px) {
   .btn {
-    padding: 15px 50px;
+    padding: 15px 40px;
+    margin-bottom: 10px;
+  }
+}
+@media screen and (max-width: 1400px) {
+  .btn {
+    padding: 15px 40px;
+    margin-bottom: 10px;
+  }
+  .btn::before {
+    content: '';
+    width: 100%;
+    height: 10px;
+    background-color: #49d893;
+    position: absolute;
+    border-radius: 0 0px 20px 0px;
+    top: 0;
+    right: 0;
+  }
+  .btn::after {
+    content: '';
+    width: 100%;
+    height: 10px;
+    background-color: #49d893;
+    position: absolute;
+    border-radius: 0 20px 0px 0;
+    bottom: 0;
+    right: 0;
+  }
+}
+
+@media screen and (max-width: 1000px) {
+  .sidenav {
+    margin-top: 20px;
+    padding: 20px 0;
+  }
+  .btn {
+    float: none;
+    padding: 0 40px;
+    border-radius: 20px;
+  }
+  .btn::before {
+    content: '';
+    width: 0;
+    height: 0px;
+    background-color: #49d893;
+    position: absolute;
+    /* border-radius: 0 0px 20px 0px; */
+    top: 0;
+    right: 0;
+  }
+  .btn::after {
+    content: '';
+    width: 0;
+    height: 0px;
+    background-color: #49d893;
+    position: absolute;
+    /* border-radius: 0 20px 0px 0; */
+    bottom: 0;
+    right: 0;
+  }
+}
+
+@media screen and (max-width: 500px) {
+  .btn {
+    border-radius: 20px;
+    padding: 10px 40px;
+    margin-right: 10px;
   }
 }
